--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col">
            <div class="card">
-      <img class="img-fluid mx-3 my-3" src="./images/image-qr-code.png">
+      <img class="img-fluid mx-3 my-3" src="./image-qr-code.png">
       <h6 class="ms-3 me-3 text-center">Improve your front-end skills by building projects</h6>
       <p class="me-3 ms-3 mb-4 text-center">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
