--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-  <section>
+  <section role="main">
     <div class="container d-flex justify-content-center align-items-center">
       <div class="row">
         <div class="col">
            <div class="card">
-      <img class="img-fluid mx-3 my-3" src="./image-qr-code.png">
+      <img class="img-fluid mx-3 my-3" src="./image-qr-code.png" alt="qr-image">
       <h6 class="ms-3 me-3 text-center">Improve your front-end skills by building projects</h6>
       <p class="me-3 ms-3 mb-4 text-center">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
