--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
     </div>
         </div>
       </div>
-   
   </div>
   </section>
   <footer class="footer mt-auto py-3 bg-light text-center">
-      <P class="text-muted" id="footer-text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Sofia Dominguez</a></P>
+      <p class="text-muted" id="footer-text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Sofia Dominguez</a></p>
   </footer>
 </body>
 
