arreglos directorios y rutas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Frontend Mentor | QR code component</title>
 </head>
 
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col">
            <div class="card">
-      <img class="img-fluid mx-3 my-3" src="./image-qr-code.png" alt="qr-image">
+      <img class="img-fluid mx-3 my-3" src="./assets/img/image-qr-code.png" alt="qr-image">
       <h1 class="ms-3 me-3 text-center">Improve your front-end skills by building projects</h1>
       <h2 class="me-3 ms-3 mb-4 text-center">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
     </div>
